add setapp and minor fix to other blogs

--- a/src/app/articles/mcdonalds-8th-wonder-of-the-world/page.mdx
+++ b/src/app/articles/mcdonalds-8th-wonder-of-the-world/page.mdx
@@ -5,7 +5,7 @@ import fightImage from './fries.png'
 export const article = {
   author: 'Leitz',
   date: '2021-05-14',
-  title: 'McDonald\'s is the 8th wonder of the modern world.',
+  title: 'McDonald\'s is the 8th wonder of the modern world',
   description:
     'If you went back in time and told someone in 1810 about the future, they wouldn\'t believe you when you described McDonald\'s.',
 }
