add links to twitter article page

--- a/src/app/articles/do-you-have-a-boomer-manager/page.mdx
+++ b/src/app/articles/do-you-have-a-boomer-manager/page.mdx
@@ -164,3 +164,8 @@ The first step is to identify all the anti-patterns and abolish them.
 
 I'm confident the next generation of software developers will have better lives and produce incredible software products.
 
+### Add your thoughts to the discussion
+
+[I have a level headed thought I want to share](https://x.com/mleitz1/status/1800152878331342878)
+
+[I have an totally unhinged thought you must know about, RIGHT NOW!](https://x.com/mleitz1/status/1800152878331342878)
