add links to twitter article page

--- a/src/app/articles/christmas/page.mdx
+++ b/src/app/articles/christmas/page.mdx
@@ -17,9 +17,9 @@ export const metadata = {
 
 export default (props) => <ArticleLayout article={article} {...props} />
 
-A bad year? 
+A bad year?
 
-Punish the blue collar workers. 
+Punish the blue collar workers.
 
 Celebrate the white collar workers.
 
@@ -33,7 +33,7 @@ In 1995 I flunked out of university and had to work in a blue collar factory for
 
 My co-workers, many of them being my friends, worked hard and took their jobs seriously.
 
-In the processing section of the factory there were many machines and each machine had one person running it. There were 5 big machines and a total of 5 operators. 
+In the processing section of the factory there were many machines and each machine had one person running it. There were 5 big machines and a total of 5 operators.
 
 Running a machine was a lot of work for one person. So there were 2 general utility people assigned to help the 5 operators.
 
@@ -67,7 +67,7 @@ In fact, they didn't even scale down or cancel their annual Christmas party.
 
 I go to the Christmas Party. I enter the building and what I see takes my breath away.
 
-It's held at one of the most famous museums in the world. They closed the museum early and hosted our company's Christmas party. 
+It's held at one of the most famous museums in the world. They closed the museum early and hosted our company's Christmas party.
 
 We walked and saw every exhibit.
 
@@ -81,6 +81,12 @@ The down year for blue collar workers? Fire 3 people and save 100k per year.
 
 The down year for white collar workers? Who cares? Throw an extravagant Christmas party that cost more than $100k.
 
-The contrast between firing workers to save $100k and the $100k Christmas party was hard for me to understand. As I write this, I still have a hard time with it. 
+The contrast between firing workers to save $100k and the $100k Christmas party was hard for me to understand. As I write this, I still have a hard time with it.
 
 It's weirdly emotional to write this 25 years later.
+
+### Add your thoughts to the discussion
+
+[I have a level headed thought I want to share](https://x.com/mleitz1/status/1678384087743045632)
+
+[I have an totally unhinged thought you must know about, RIGHT NOW!](https://x.com/mleitz1/status/1678384087743045632)
