--- a/src/app/articles/fist-fight/page.mdx
+++ b/src/app/articles/fist-fight/page.mdx
@@ -94,3 +94,11 @@ When stress elevates and tempers flare, it's fisticuffs.
 I never saw another fist fight in my 25+ years in the business.
 
 This one was for the ages.
+
+### Add your thoughts to the discussion
+
+[I have a level headed thought I want to share](https://x.com/mleitz1/status/1666412916856311808)
+
+[I have an totally unhinged thought you must know about, RIGHT NOW!](https://x.com/mleitz1/status/1666412916856311808)
+
+
