--- a/src/app/articles/atool-rules-them-all/page.mdx
+++ b/src/app/articles/atool-rules-them-all/page.mdx
@@ -39,7 +39,7 @@ With atool, extracting a .tar archive will automatically put the extracted files
 
 ## Tutorial
 
-I'll show you how to 
+I'll show you how to
 
  * create an archive
  * list its contents
@@ -135,4 +135,8 @@ Up your productivity by using higher level commands like atool.
 
 One command to rule all archives!
 
- If you have any problems, contact me on X at https://x.com/mleitz1
+### Add your thoughts to the discussion
+
+[I have a level headed thought I want to share](https://x.com/mleitz1/status/1802110090650034502)
+
+[I have an totally unhinged thought you must know about, RIGHT NOW!](https://x.com/mleitz1/status/1802110090650034502)
