--- a/src/app/articles/decompile-java-class-files/page.mdx
+++ b/src/app/articles/decompile-java-class-files/page.mdx
@@ -132,7 +132,7 @@ Usage: java -jar jd-cli.jar [options] [Files to decompile]
   ... more ...
 ```
 
-If that worked, you're done. 
+If that worked, you're done.
 
 Now find a .class file and give it a real test.
 
@@ -197,4 +197,8 @@ Use the jd-cli help for other supported decompile features.
 
 This helps you when you're doing work on the command line and need to decompile a Java .class file.
 
-If you can't get this work, feel free to reach out to me https://mleitz1@x.com and I will help.
+### Add your thoughts to the discussion
+
+[I have a level headed thought I want to share](https://x.com/mleitz1/status/1802116214853959692)
+
+[I have an totally unhinged thought you must know about, RIGHT NOW!](https://x.com/mleitz1/status/1802116214853959692)
